--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,10 @@
-<mat-toolbar color="primary">MyMessage</mat-toolbar>
+<mat-toolbar color="primary">
+<span>
+    <a routerLink="/"> My Messages </a>
+</span>
+<ul>
+    <li>
+        <a routerLink="/create"> New Post</a>
+    </li>
+</ul>
+</mat-toolbar>
