--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -22,6 +22,6 @@
                 placeholder="Type the content"></textarea>
         <mat-error *ngIf="content.invalid">Pease enter a post content</mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary" type="submit">Save Post</button>
+        <button mat-raised-button color="warn" type="submit">Save Post</button>
     </form>
 </mat-card>
