--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -5,7 +5,7 @@
                 matInput 
                 type="text" 
                 name="title" 
-                ngModel 
+                [ngModel] = "post.title" 
                 required 
                 #title="ngModel"
                 placeholder="Type the title">
@@ -15,7 +15,7 @@
             <textarea 
                 matInput row="4" 
                 name="content" 
-                ngModel 
+                [ngModel] = "post.content"
                 required 
                 minlength="3" 
                 #content="ngModel"
