--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -12,6 +12,10 @@
                 placeholder="Type the title">
         <mat-error *ngIf="title.invalid">Pease enter a post title</mat-error>
         </mat-form-field>
+        <div>
+            <button mat-stroked-button type='button' (click)='filePicker.click()'>Pick Image</button>
+            <input type='file' #filePicker>
+        </div>
         <mat-form-field>
             <textarea 
                 matInput row="4" 
