--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -2,7 +2,7 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
     <mat-expansion-panel *ngFor="let post of posts">
-        <mat-expansion-panel-header> 
+        <mat-expansion-panel-header>
             {{post.title}}
         </mat-expansion-panel-header>
         <p>{{post.content}}</p>
@@ -12,4 +12,4 @@
         </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
-<p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet</p>
+<p class="info-text mat-body-1" *ngIf="posts.length <= 0">No posts added yet</p>
