--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,16 +1,13 @@
 <mat-card>
     <mat-spinner *ngIf="isLoading"></mat-spinner>
-    <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+    <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
         <mat-form-field>
             <input 
                 matInput 
                 type="text" 
-                name="title" 
-                [ngModel] = "post?.title" 
-                required 
-                #title="ngModel"
+                formControlName="title" 
                 placeholder="Type the title">
-        <mat-error *ngIf="title.invalid">Pease enter a post title</mat-error>
+        <mat-error *ngIf="form.get('title').invalid">Pease enter a post title</mat-error>
         </mat-form-field>
         <div>
             <button mat-stroked-button type='button' (click)='filePicker.click()'>Pick Image</button>
@@ -18,14 +15,11 @@
         </div>
         <mat-form-field>
             <textarea 
-                matInput row="4" 
-                name="content" 
-                [ngModel] = "post?.content"
-                required 
-                minlength="3" 
-                #content="ngModel"
+                matInput
+                rows="4"
+                formControlName="content" 
                 placeholder="Type the content"></textarea>
-        <mat-error *ngIf="content.invalid">Pease enter a post content</mat-error>
+        <mat-error *ngIf="form.get('content').invalid">Pease enter a post content</mat-error>
         </mat-form-field>
         <button mat-raised-button color="warn" type="submit">Save Post</button>
     </form>
